--- a/Demowcf.Business.Facade.WebService/Web.config
+++ b/Demowcf.Business.Facade.WebService/Web.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-
+  <connectionStrings>
+    <add name="StudentContext" connectionString="Data Source=AM-BCN-POR-417;Initial Catalog=StudentDB;User ID=sa;Password=Pa$$w0rd" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
