--- a/Demowcf.Common.Logic/Demowcf.Common.Logic.csproj
+++ b/Demowcf.Common.Logic/Demowcf.Common.Logic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4EA62BA5-2708-4FB1-9EC8-4011FA7351EA}</ProjectGuid>
+    <ProjectGuid>{071FB111-0A54-4A40-9C5D-0CD2FE6A30D2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Demowcf.Business.Logic</RootNamespace>
-    <AssemblyName>Demowcf.Business.Logic</AssemblyName>
+    <RootNamespace>Demowcf.Common.Logic</RootNamespace>
+    <AssemblyName>Demowcf.Common.Logic</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,19 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DemowcfBLService.cs" />
-    <Compile Include="IDemowcfBLService.cs" />
+    <Compile Include="Model\Student.cs" />
+    <Compile Include="Model\StudentContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Demowcf.Common.Logic\Demowcf.Common.Logic.csproj">
-      <Project>{071FB111-0A54-4A40-9C5D-0CD2FE6A30D2}</Project>
-      <Name>Demowcf.Common.Logic</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Demowcf.DataAcces.Dao\Demowcf.DataAcces.Dao.csproj">
-      <Project>{B02D4374-E00A-4014-A52A-2594F7D7200A}</Project>
-      <Name>Demowcf.DataAcces.Dao</Name>
-    </ProjectReference>
+    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
