--- a/Demowcf.Business.Facade.WebService/Demowcf.Business.Facade.WebService.csproj
+++ b/Demowcf.Business.Facade.WebService/Demowcf.Business.Facade.WebService.csproj
@@ -44,6 +44,9 @@
     <Reference Include="Autofac, Version=4.8.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.8.0\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="Autofac.Integration.Wcf, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.Wcf.4.0.0\lib\net45\Autofac.Integration.Wcf.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -64,15 +67,21 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="Students.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="IocConfig.cs" />
     <Compile Include="IStudents.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Students.svc.cs">
       <DependentUpon>Students.svc</DependentUpon>
     </Compile>
+    <Compile Include="WebApiIocModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
